--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.11.1",
     "pinia": "^2.1.7",
     "vee-validate": "^4.12.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
+    "vuefire": "^3.1.23",
     "vuetify": "^3.6.3"
   },
   "devDependencies": {
