--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "firebase": "^10.11.1",
     "pinia": "^2.1.7",
     "vee-validate": "^4.12.7",
